WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306425
[LBSE] Fix assertions due to isPaintOffsetCacheEnabled in RenderSVGRoot::mapLocalToContainer
https://bugs.webkit.org/show_bug.cgi?id=306425
Summary
[LBSE] Fix assertions due to isPaintOffsetCacheEnabled in RenderSVGRoot::mapL...
Rob Buis
Reported
2026-01-28 06:17:57 PST
Fix assertions due to isPaintOffsetCacheEnabled in RenderSVGRoot::mapLocalToContainer.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2026-01-28 06:41:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57406
Radar WebKit Bug Importer
Comment 2
2026-02-04 06:18:13 PST
<
rdar://problem/169617279
>
EWS
Comment 3
2026-02-20 05:41:00 PST
Committed
307909@main
(8a16202bfd34): <
https://commits.webkit.org/307909@main
> Reviewed commits have been landed. Closing PR #57406 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug