[LBSE] Fix assertions due to isPaintOffsetCacheEnabled in RenderSVGRoot::mapLocalToContainer https://bugs.webkit.org/show_bug.cgi?id=306425

Reviewed by Nikolas Zimmermann.

Normally mapLocalToContainer in SVG will be called with PaintOffsetCache disabled since
RenderSVGRoot::layout uses LayoutStateDisabler, however it can be called after layout from
LocalFrameViewLayoutContext::performLayout through the absoluteQuads call. Since this can
only happen there, disregard the assertion when not in (SVG) layout.

* Source/WebCore/rendering/svg/RenderSVGRoot.cpp:
(WebCore::RenderSVGRoot::mapLocalToContainer const):

Canonical link: https://commits.webkit.org/307909@main